--- a/Electro/src/scss/pages/home/_home.scss
+++ b/Electro/src/scss/pages/home/_home.scss
@@ -443,7 +443,7 @@
         .col-6{
             background-color: #ffff;
         }
-        padding: 15px;
+        padding: 1px;
         img{
             border-right: 1px solid #dddddd;
             display: block;
@@ -519,8 +519,6 @@
             width: 100%;
             height: 100%;
           }
-
-       
       
           .swiper-slide {
             text-align: center;
@@ -538,12 +536,10 @@
             object-fit: cover;
           }
       
-          body {
-            background: #000;
-            color: #000;
-          }
+          
       
           .swiper {
+            background-color: #fff;
             width: 100%;
             height: 300px;
             margin-left: auto;
@@ -553,42 +549,54 @@
           .swiper-slide {
             background-size: cover;
             background-position: center;
-            height: 200px;
           }
-          
-          .swiper-slide-active{
-            height: 500px;
-            img{
-                margin-top: -150px;
-            }
-          }
-          .swiper-slide-visible{
-            height: 150px;
-            width: 150px;
-            img{
-                margin-top: 50px;
-                width: 100px;
-                height: 100px;
+      
+          .mySwiper2 {
+            height: 80%;
+            width: 100%;
+            span{
+                color: #848484;
                 
             }
+            p{
+                color: #0062bd;
+                font-weight: 650;
+            }
           }
       
-          .mySwiperr{
-            height: 100%;
-            width: 100%;
+          .mySwiper {
+            height: 20%;
+            box-sizing: border-box;
+            padding: 30px 50px;
+        
           }
 
-          .swiper-wrapper img{
-            display: block;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+          .swiperprice{
+            display: flex;
+            justify-content: space-between;
+            h5{
+                color: #dc3545;
+                span{
+                    color: #848484;
+                    font-size: 0.9rem;
+                    text-decoration: line-through;
+                    font-weight: 440;
+                }
+            }
+            button{
+                background-color: #fed700;
+                color: #fff;
+                border: none;
+                border-radius: 25px;
+                margin-top: -20px;
+                width: 160px;
+                font-weight: 650;
+            }
           }
-      
-          .mySwiperr {
-            height: 100%;
-            box-sizing: border-box;
-            padding: 10px 0;
+
+          .mySwiper img{
+            border: 1px solid #848484;
+            
           }
       
           .mySwiper .swiper-slide {
@@ -601,12 +609,14 @@
             opacity: 1;
           }
       
+          .swiper-wrapper{
+            height: 88%;
+          }
           .swiper-slide img {
             display: block;
-            width: 60%;
-            height: 60%;
+            width: 80%;
+            height: 80%;
             object-fit: cover;
-            padding: 20px;
           }
     }
 }
@@ -702,4 +712,104 @@
  
     }
 
+}
+
+
+#tablet{
+    img{
+        margin-top: 30px;
+        display: block;
+        width: 95%;
+        height: auto;
+        object-fit: cover;
+        margin-left: 40px;
+    }
+    .overlay{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(255, 255, 255, 0.212) ;
+        overflow: hidden;
+        width: 100%;
+        height: 0;
+        transition: .3s ease-in-out;
+    }
+
+
+    .image4-1{
+        position: relative;
+        width: 100%;
+    }
+    .image4-1 :hover .overlay {
+        height: 100%;
+      }
+}
+
+
+#newarrivals{
+    margin-top: 50px;
+    h4{
+        margin-left: 50px;
+    }
+    hr{
+        width: 90%;
+        margin-left: 50px;
+    }
+     .image5{
+                position: relative;
+                width: 100%;
+                a{
+                    text-decoration: none;
+                }
+                span{
+                    color: #8fa7c1;
+                    font-size: 0.9rem;
+                }
+                p{
+                    color: #0062bd;
+                    font-weight: 650;
+                }
+                .overlay{
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    background-color: rgba(255, 255, 255, 0.212) ;
+                    overflow: hidden;
+                    width: 100%;
+                    height: 0;
+                    transition: .3s ease-in-out;
+                    svg{
+                        
+                        color: #848484;
+                    }
+                    color: #848484;
+                }
+            }
+            
+            .image5 :hover .overlay {
+                height: 100%;
+              
+              }
+    .swiper {
+        width: 90%;
+        height: 90%;
+      }
+  
+      .swiper-slide {
+        border-right: 1px solid #dddddd;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+  
+      .swiper-slide img {
+        display: block;
+        width: 80%;
+        height: 80%;
+        object-fit: cover;
+      }
 }
