--- a/Electro/src/scss/pages/home/_home.scss
+++ b/Electro/src/scss/pages/home/_home.scss
@@ -829,6 +829,13 @@
     h4{
         margin-left: 50px;
     }
+    h5{
+        color: #dc3545;
+        span{
+            color: #848484;
+            text-decoration: line-through;
+        }
+    }
     hr{
         width: 90%;
         margin-left: 50px;
